decompiler/tests/snapshots/test_tool__x86_64_callconv__func077.snap
---
source: decompiler/tests/test_tool.rs
expression: out
---
func077 0x401285+1 (file 0x1285)
          401285: c3                      ret

function type: "func077" func (arg0 *void <TypeID(1v1)>,
                               arg1 *void <TypeID(1v1)>,
                               arg2 small <TypeID(785v1)>,
                               arg3 small_xmms <TypeID(792v1)>) small_xmms <TypeID(792v1)>
0 warnings.


mil program = 
program  67 instrs
    0 r12: TypeID(2v1) <- Ancestral(AncestralName("stack_bottom"))
    1 r2: TypeID(2v1) <- Ancestral(AncestralName("CF"))
    2 r3: TypeID(2v1) <- Ancestral(AncestralName("PF"))
    3 r4: TypeID(2v1) <- Ancestral(AncestralName("AF"))
    4 r5: TypeID(2v1) <- Ancestral(AncestralName("ZF"))
    5 r6: TypeID(2v1) <- Ancestral(AncestralName("SF"))
    6 r7: TypeID(2v1) <- Ancestral(AncestralName("TF"))
    7 r8: TypeID(2v1) <- Ancestral(AncestralName("IF"))
    8 r9: TypeID(2v1) <- Ancestral(AncestralName("DF"))
    9 r10: TypeID(2v1) <- Ancestral(AncestralName("OF"))
   10 r11: TypeID(2v1) <- Ancestral(AncestralName("RBP"))
   11 r12: TypeID(2v1) <- Ancestral(AncestralName("RSP"))
   12 r13: TypeID(2v1) <- Ancestral(AncestralName("RIP"))
   13 r14: TypeID(2v1) <- Ancestral(AncestralName("RDI"))
   14 r15: TypeID(2v1) <- Ancestral(AncestralName("RSI"))
   15 r16: TypeID(2v1) <- Ancestral(AncestralName("RAX"))
   16 r17: TypeID(2v1) <- Ancestral(AncestralName("RBX"))
   17 r18: TypeID(2v1) <- Ancestral(AncestralName("RCX"))
   18 r19: TypeID(2v1) <- Ancestral(AncestralName("RDX"))
   19 r20: TypeID(2v1) <- Ancestral(AncestralName("R8"))
   20 r21: TypeID(2v1) <- Ancestral(AncestralName("R9"))
   21 r22: TypeID(2v1) <- Ancestral(AncestralName("R10"))
   22 r23: TypeID(2v1) <- Ancestral(AncestralName("R11"))
   23 r24: TypeID(2v1) <- Ancestral(AncestralName("R12"))
   24 r25: TypeID(2v1) <- Ancestral(AncestralName("R13"))
   25 r26: TypeID(2v1) <- Ancestral(AncestralName("R14"))
   26 r27: TypeID(2v1) <- Ancestral(AncestralName("R15"))
   27 r28: TypeID(2v1) <- Ancestral(AncestralName("ZMM0"))
   28 r29: TypeID(2v1) <- Ancestral(AncestralName("ZMM1"))
   29 r30: TypeID(2v1) <- Ancestral(AncestralName("ZMM2"))
   30 r31: TypeID(2v1) <- Ancestral(AncestralName("ZMM3"))
   31 r32: TypeID(2v1) <- Ancestral(AncestralName("ZMM4"))
   32 r33: TypeID(2v1) <- Ancestral(AncestralName("ZMM5"))
   33 r34: TypeID(2v1) <- Ancestral(AncestralName("ZMM6"))
   34 r35: TypeID(2v1) <- Ancestral(AncestralName("ZMM7"))
   35 r36: TypeID(2v1) <- Ancestral(AncestralName("ZMM8"))
   36 r37: TypeID(2v1) <- Ancestral(AncestralName("ZMM9"))
   37 r38: TypeID(2v1) <- Ancestral(AncestralName("ZMM10"))
   38 r39: TypeID(2v1) <- Ancestral(AncestralName("ZMM11"))
   39 r40: TypeID(2v1) <- Ancestral(AncestralName("ZMM12"))
   40 r41: TypeID(2v1) <- Ancestral(AncestralName("ZMM13"))
   41 r42: TypeID(2v1) <- Ancestral(AncestralName("ZMM14"))
   42 r43: TypeID(2v1) <- Ancestral(AncestralName("ZMM15"))
   43 r45: TypeID(2v1) <- Ancestral(AncestralName("arg0"))
   44 r14: TypeID(2v1) <- Get(r45)
   45 r46: TypeID(2v1) <- Ancestral(AncestralName("arg1"))
   46 r15: TypeID(2v1) <- Get(r46)
   47 r47: TypeID(2v1) <- Ancestral(AncestralName("arg2"))
   48 r48: TypeID(2v1) <- Part { src: r47, offset: 0, size: 8 }
   49 r19: TypeID(2v1) <- Get(r48)
   50 r49: TypeID(2v1) <- Part { src: r47, offset: 8, size: 8 }
   51 r18: TypeID(2v1) <- Get(r49)
   52 r50: TypeID(2v1) <- Ancestral(AncestralName("arg3"))
   53 r51: TypeID(2v1) <- Part { src: r50, offset: 0, size: 8 }
   54 r52: TypeID(2v1) <- Part { src: r28, offset: 8, size: 56 }
   55 r28: TypeID(2v1) <- Concat { lo: r51, hi: r52 }
   56 r53: TypeID(2v1) <- Part { src: r50, offset: 8, size: 8 }
   57 r54: TypeID(2v1) <- Part { src: r29, offset: 8, size: 56 }
   58 r29: TypeID(2v1) <- Concat { lo: r53, hi: r54 }
0x401285:
   59 r45: TypeID(2v1) <- Void
   60 r46: TypeID(2v1) <- Part { src: r28, offset: 0, size: 8 }
   61 r45: TypeID(2v1) <- Concat { lo: r45, hi: r46 }
   62 r46: TypeID(2v1) <- Part { src: r29, offset: 0, size: 8 }
   63 r45: TypeID(2v1) <- Concat { lo: r45, hi: r46 }
   64 r45: TypeID(2v1) <- Part { src: r45, offset: 0, size: 16 }
   65 r47: TypeID(2v1) <- SetReturnValue(r45)
   66 r47: TypeID(2v1) <- Control(Ret)


ssa pre-xform:
ssa program  67 instrs
.B0:    ;;  → Always(Return).
         r27: ? <- Ancestral(AncestralName("ZMM0"))
         r28: ? <- Ancestral(AncestralName("ZMM1"))
  (  2)  r52: ? <- Ancestral(AncestralName("arg3"))
         r53: ? <- Part { src: r52, offset: 0, size: 8 }
         r54: ? <- Part { src: r27, offset: 8, size: 56 }
         r55: ? <- Concat { lo: r53, hi: r54 }
         r56: ? <- Part { src: r52, offset: 8, size: 8 }
         r57: ? <- Part { src: r28, offset: 8, size: 56 }
         r58: ? <- Concat { lo: r56, hi: r57 }
         r60: ? <- Part { src: r55, offset: 0, size: 8 }
         r61: ? <- Concat { lo: r59, hi: r60 }
         r62: ? <- Part { src: r58, offset: 0, size: 8 }
         r63: ? <- Concat { lo: r61, hi: r62 }
         r64: ? <- Part { src: r63, offset: 0, size: 16 }
         r65: ? <- SetReturnValue(r64)


cfg:
  entry: BlockID(0)
  BlockID(0) -> Always(Return) [r27, r28, r52, r53, r54, r55, r56, r57, r58, r59, r60, r61, r62, r63, r64, r65]
  domtree:
    BlockID(0)

ssa post-xform:
ssa program  67 instrs
.B0:    ;;  → Always(Return).
  (  2)  r52: ? <- Ancestral(AncestralName("arg3"))
         r60: ? <- Part { src: r52, offset: 0, size: 8 }
         r62: ? <- Part { src: r52, offset: 8, size: 8 }
         r63: ? <- Concat { lo: r60, hi: r62 }
         r65: ? <- SetReturnValue(r63)



T0: {
  ;
  return pre:arg3[16 .. 8] ++ pre:arg3[8 .. 0]
}
